Fixes for homepage spacing

--- a/components/_content.scss
+++ b/components/_content.scss
@@ -20,11 +20,14 @@
 	&:has(.swim-lane) {
 		padding-top: 0;
 		padding-bottom: 0;
+	}
 
-		&:has(#browse-bar) {
-			#content {
-				padding: 60px;
-			}
+	&:has(#browse-bar) {
+		padding-top: 0;
+		padding-bottom: 0;
+
+		#content {
+			padding: 40px 0;
 		}
 	}
 
